--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Kim's Portfolio</title>
+    <title>N-Joint Arm Inverse Kinematics</title>
     <meta charset="utf-8">
   </head>
   <body>
