added linux exe

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
     <nav>
     </nav>
     <main>
-      The Python3 program can be downloaded 
-      <a href="N-Joint_Inverse_Kinematics.zip" download>here</a>
+      The Python3 program can be downloaded here:
+      <table>
+	<tr>
+	  <td>
+	    <a href="./N_Jointed_Arm_Controller.exe" download>
+	      Windows
+	    </a>
+	  </td>
+	</tr>
+	<tr>
+	  <td>
+	    <a href="./N_Jointed_Arm_Controller" download>
+	      Linux
+	    </a>
+	  </td>
+	</tr>
+      </table>
     </main>
     <footer>
       <hr>
